# lastfmrobot

./: .gitignore  Cargo.toml  Readme.md
src/: anal.rs  api_requester.rs  collage.rs  config.rs.example  consts.rs  db.rs  main.rs  utils.rs
