[package]
name = "lastfmrobot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { git = "https://github.com/teloxide/teloxide.git", features = ["macros", "throttle"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
url-escape = "0.1"
http = "1.1"
http-cache-reqwest = { version = "0.14", features = ["manager-moka"] }
reqwest-middleware = {version = "0.3", features = ["json"] }
num-format = "0.4"
bytes = "1.7"
serde = "1.0"
serde_with = "3.10"
timeago = "0.4"
rand = "0.8"
async-trait = "0.1"
task-local-extensions = "0.1"
anyhow = "1.0"
moka = { version = "0.12", features = ["future"] }
strum = "0.26"
strum_macros = "0.26"
chrono = "0.4"
